# enchiridion.txt

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: push.yaml
src/enchiridion/: cli.py  server.py  utils.py
src/enchiridion/chapters/: ix.txt  vii.txt  viii.txt  x.txt  xi.txt  xii.txt  xiii.txt  xiv.txt  xix.txt  xv.txt  xvi.txt  xvii.txt  xviii.txt  xx.txt  xxi.txt  xxii.txt
