[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enchiridion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
enchiridion = "enchiridion.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"enchiridion" = ["chapters/**/*"]